# stock-k-bar

./: .gitignore  AGENTS.md  CLAUDE.md  k-bar-llm.md  k-bar-power-llm.md  pyproject.toml
configs/: balanced_high_quality.json  dynamic_trailing.json  full_extras.json  strict.json  strict_high_quality.json  trailing_loose.json
data/: zhuli_articles.db
docs/: COURSE_EXTRACTION_WORKFLOW.md
scripts/: __init__.py  analysis_swing_capture_rate.py  analysis_tweezer_vs_pattern.py  attack_quality_analysis.py  backfill_historical_ohlcv.py  backfill_per_data.py  backfill_taiex.py  backtest.py  batch_extract_kline.py  breakout_attack_strategy_check.py  breakout_daily_scanner.py  breakout_intraday_quality_check.py  breakout_next_open_quality_check.py  build_case_index_v2.py  calibrate_entry_thresholds.py  compute_limit_down_count.py  compute_main_force_from_ndjson.py  consolidate_minute_bars.py  daily_review.py  exit_simulation.py  extract_kline_articles.py  false_breakdown_strategy_check.py  fetch_attack_cost_minute_data.py  finmind_intraday_kline_check.py  finmind_sanity_backtest.py  four_seasons_accuracy.py  four_seasons_backtest.py  four_seasons_backtest_v6_augment.py  four_seasons_backtest_v7_multiperiod.py  four_seasons_backtest_v7_portfolio.py  four_seasons_backtest_v8_trail_compare.py  four_seasons_classify.py  generate_phase4_report.py  import_institutional_to_db.py  import_ndjson_to_db.py  kline_course_backtest.py  kline_patterns_2026_sanity.py  kline_patterns_autocorrect_dates.py  kline_patterns_calibrate.py  kline_patterns_validate.py  (+20 more)
tests/: conftest.py  (+2 more)
(+2962 files in other folders)
